Fixed guide font and spacing

--- a/src/components/guide/Guide.scss
+++ b/src/components/guide/Guide.scss
@@ -1,18 +1,10 @@
 .app {
   background-color: var(--var-primary);
-  width: 65rem;
-  min-height: 200px;
+  width: 50%;
   height: min-content;
   border-radius: 15px;
-  padding: 2rem;
+  padding: 1rem;
   box-shadow: 2px 2px 8px 2px rgba($color: #11867994, $alpha: 1);
-}
-
-.score-section {
-  display: flex;
-  font-size: 2rem;
-  align-items: center;
-  justify-content: center;
 }
 
 .question-section {
@@ -25,8 +17,9 @@
 
 .question-count {
   color: var(--var-text);
+  font-family: var(--text-font);
   margin-bottom: 1rem;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 
 .question-count span {
@@ -36,17 +29,18 @@
 .question-text {
   margin-bottom: 12px;
   font-size: 2rem;
+  font-family: var(--text-font);
 }
 
 /* ANSWERS/RIGHT SECTION */
 .answer-section {
-  color: var(--var-text);
+  color: var(--var-secondary);
   font-size: 1.3rem;
+  font-family: var(--text-font);
   display: flex;
   justify-content: center;
   justify-content: space-around;
   width: 100%;
-  padding: 1.2rem;
 }
 
 button {
@@ -72,4 +66,12 @@ button:hover {
 
 button:focus {
   outline: none;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-family: var(--title--font);
+  color: var(--var-secondary);
 }
