--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -9,7 +9,7 @@ header {
     margin-bottom: 5rem;
     object-fit: cover;
     width: 100%;
-    height: 55vh;
+    height: 62vh;
     opacity: 0.5;
   }
 }
